updated html and added assets

--- a/joke-sphere/src/app/app.component.html
+++ b/joke-sphere/src/app/app.component.html
@@ -1,5 +1,21 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-<p>{{randomJoke.value}}</p>
-</div>
+<div class="card">
+        <img src="../assets/chuck-norris.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+            <h4 class="title">Chuck Norris Jokes</h4>
+        </div>
+    </div>
+    <div class="card">
+        <img src="../assets/programming-jokes.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+            <h4 class="title">Programming Jokes</h4>
+        </div>
+    </div>
+    <div class="card">
+        <img src="../assets/yo-mama.png" alt="Avatar" style="width:100%">
+        <div class="container">
+            <h4 class="title">Yo Mama Jokes</h4>
+        </div>
+    </div>
+
 <router-outlet></router-outlet>
