--- a/joke-sphere/src/app/app.component.html
+++ b/joke-sphere/src/app/app.component.html
@@ -1,4 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
+<h3>Chuck Norris joke</h3>
+<p>{{randomJokeChuck.value}}</p>
+<h3>Geek Joke</h3>
+<p>{{randomJokeGeek}}</p>
+<h3>Random Joke</h3>
+<p>{{randomJoke.setup}}</p>
+<p>{{randomJoke.punchline}}</p>
 <div class="card">
         <img src="../assets/chuck-norris.jpg" alt="Avatar" style="width:100%">
         <div class="container">
