--- a/joke-sphere/src/app/app.component.html
+++ b/joke-sphere/src/app/app.component.html
@@ -1,12 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
+<h1>JOKE SPHERE</h1>
 <h3>Chuck Norris joke</h3>
-<p>{{randomJokeChuck.value}}</p>
+<button (click)="onClickMe1()">Click me!</button>
 <h3>Geek Joke</h3>
-<p>{{randomJokeGeek}}</p>
+<button (click)="onClickMe2()">Click me!</button>
 <h3>Random Joke</h3>
-<p>{{randomJoke.setup}}</p>
-<p>{{randomJoke.punchline}}</p>
+<button (click)="onClickMe3()">Click me!</button>
+<h4>{{showJoke}}</h4>
 <div class="card">
         <img src="../assets/chuck-norris.jpg" alt="Avatar" style="width:100%">
         <div class="container">
