--- a/joke-sphere/src/app/app.component.html
+++ b/joke-sphere/src/app/app.component.html
@@ -6,91 +6,104 @@
 			<!-- CHUCK NORRIS JOKE -->
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="box-part text-center">
-					<img src="../assets/chuck-norris.jpg" alt="Avatar" style="width:200px; height: 150px">
+					<img src="../assets/chuck-norris.jpg" alt="Avatar">
 					<div class="title">
 					<br>
 						<h4>Chuck Norris Joke</h4>
 					</div>
 					<br>
-					<button (click)="onClickMe1()" class="btn btn-dark">Pull one out!</button>
+					<button (click)="onClickMe1()" class="btn btn-outline-dark">Pull one out!</button>
 				</div>
 			</div>
 
 			<!-- GEEK JOKE -->
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="box-part text-center">
-					<img src="../assets/geek.jpg" alt="Avatar" style="width:200px; height: 150px">
+					<img src="../assets/geek.jpg" alt="Avatar">
 					<div class="title">
 					<br>
 						<h4>Geek Joke</h4>
 					</div>
 					<br>
-					<button (click)="onClickMe2()" class="btn btn-dark">Pull one out!</button>
+					<button (click)="onClickMe2()" class="btn btn-outline-dark">Pull one out!</button>
 				</div>
 			</div>
 			<!-- RANDOM JOKE -->
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="box-part text-center">
-					<img src="../assets/random.jpg" alt="Avatar" style="width:200px; height: 150px">
+					<img src="../assets/random.jpg" alt="Avatar">
 					<div class="title">
 					<br>
 						<h4>Random Joke</h4>
 					</div>
 					<br>
-					<button (click)="onClickMe3()" class="btn btn-dark">Pull one out!</button>
+					<button (click)="onClickMe3()" class="btn btn-outline-dark">Pull one out!</button>
 				</div>
 			</div>
 			<!-- SHOW THE JOKE-->
-			<div style="width:80%; height:20%; margin:0 auto">
+			<div style="width:85%; height:50%; margin:0 auto" class="px-2">
 				<hr>
-				<br>
-				<br>
-				<h1>{{showJoke}}<br><br><button (click)="onClickMe10()" class="btn btn-dark">Save joke!</button></h1>
-				<br>
+				&nbsp;&nbsp;
+				<p class="lead text-center" >{{showJoke}}</p>
+				&nbsp;
+				<div class="col-md-12 text-center">
+					<button (click)="onClickMe10()" class="btn btn-outline-dark">Save joke!</button>
+				</div>
 				<hr>
 			</div>
 			<!-- JOKE -->
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="box-part text-center">
-					<img src="../assets/programming-jokes.jpg" alt="Avatar" style="width:200px; height: 150px">
+					<img src="../assets/programming-jokes.jpg" alt="Avatar">
 					<div class="title">
 					<br>
-						<h4>Programmer Joke</h4>
+						<h4 class="text-center">Programmer Joke</h4>
 					</div>
 					<br>
-					<button (click)="onClickMe4()" class="btn btn-dark">Pull one out!</button>
+					<button (click)="onClickMe4()" class="btn btn-outline-dark">Pull one out!</button>
 				</div>
 			</div>
 			<!-- JOKE -->
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="box-part text-center">
-					<img src="../assets/misc.jpg" alt="Avatar" style="width:200px; height: 150px">
+					<img src="../assets/misc.jpg" alt="Avatar">
 					<div class="title">
 					<br>
 						<h4>Misc. Joke</h4>
 					</div>
 					<br>
-					<button (click)="onClickMe7()" class="btn btn-dark">Pull one out!</button>
+					<button (click)="onClickMe7()" class="btn btn-outline-dark">Pull one out!</button>
 				</div>
 			</div>
-			<!-- JOKE -->
+			<!-- FORTUNE JOKE -->
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="box-part text-center">
-					<img src="../assets/small_fortune teller.jpg" alt="Avatar" style="width:200px; height: 150px">
+					<img src="../assets/small_fortune teller.jpg" alt="Avatar">
 					<div class="title">
 					<br>
 						<h4>Fortune Telling Joke</h4>
 					</div>
 					<br>
-					<button (click)="onClickMe6()" class="btn btn-dark">Pull one out!</button>
+					<button (click)="onClickMe6()" class="btn btn-outline-dark">Pull one out!</button>
 				</div>
 			</div>
 		
 		</div>
 		<br><br>
-		<h2 style='text-align:center;'>My saved jokes</h2>
-		<div *ngFor="let item of myJokes">
-			<p>{{item}}</p>
+		<div class="table-responsive">
+			<table class="table">
+				<thead class="thead-light">
+					<tr style='text-align:center;'>
+						<th scope="col">MY SAVED JOKES</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr *ngFor="let item of myJokes">
+						<td style='text-align:center;'>
+							<p class="font-weight-light">{{item}}</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
-		<br><br>
 	</div>
